Name:                hm2scene
Version:             0.0.0
Synopsis:            a exemplary scene using wow model
Description:         a scene using some model from WOW
License:             BSD3
Author:              Wu Jiasen
Maintainer:          starocean (dot) wx (at) gmail (dot) com
Homepage:            http://recursive.in
Stability:           Experimental
Category:            Graphics, Data
Cabal-Version:       >= 1.2
Build-Type:          Simple

Executable hm2scene
  main-is:             main.hs
  build-depends:       base, array, containers, bytestring, mtl, transformers, filepath, binary, data-binary-ieee754, fclabels, vector-space, pcre-light, OpenGL, OpenGLRaw, GLUT, GLURaw, template-haskell, stb-image == 0.1.3, gtk < 0.13, gtkglext, MaybeT, hmatrix, hdds, hm2, filepath, directory, filemanip, time, elerea, mersenne-random, vector-space-opengl
  extensions:          TypeSynonymInstances
